- Added SpotBugs to gradle - Fixed bug issues - Position has hasCode with index now - Replaced IllegalArgumentExceptions to XFLPException